--- a/translations/kangyur/translations/049-001_toh106-unravelling_the_intent.xml
+++ b/translations/kangyur/translations/049-001_toh106-unravelling_the_intent.xml
@@ -4,17 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dgongs pa nges ’grel</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Saṃdhi­nirmocana</title>
                 <title type="mainTitle" xml:lang="en">Unraveling the Intent</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dgongs pa nges par ’grel pa zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Āryasaṃdhinirmocana­nāmamahāyānasūtra</title>
-                <title type="longTitle" xml:lang="en">The Noble Sūtra of the Great Vehicle “Unraveling the Intent”</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Saṃdhi­nirmocana­sūtra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dgongs pa nges par ’grel pa/</title>
-                <title type="otherTitle" xml:lang="zh">解深密經</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Saṃdhi­nirmocana</title>
                 <title type="mainTitle" xml:lang="bo">དགོངས་པ་ངེས་འགྲེལ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dgongs pa nges ’grel</title>
+                <title type="longTitle" xml:lang="en">The Noble Sūtra of the Great Vehicle “Unraveling the Intent”</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">Āryasaṃdhinirmocana­nāmamahāyānasūtra</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་དགོངས་པ་ངེས་པར་འགྲེལ་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dgongs pa nges par ’grel pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Saṃdhi­nirmocana­sūtra</title>
+                <title type="otherTitle" xml:lang="zh">《解深密經》</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dgongs pa nges par ’grel pa/</title>
                 <author role="translatorMain" ref="contributors.xml#team-7">Translated by the Buddhavacana Translation Group (Vienna)<lb/>under the
                     patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-27">Gregory Forgues</author>
@@ -28,7 +28,7 @@
                 <sponsor ref="sponsors.xml#sponsor-22">Qiang Li (李强) and Ya Wen (文雅)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.11 <date>2022</date>
+                <edition>v 1.0.13 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -58,7 +58,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-16T14:49:35.225Z" user="admin">16/05/2022 14:49:35</note>
+                <note type="lastUpdated" date-time="2022-06-30T09:00:51.698Z" user="admin">30/06/2022 09:00:51</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:46.047Z" user="mike">2.f</note>
@@ -87,7 +87,6 @@
                 <note type="updated" update="translation-status" value="1" date-time="2020-12-15T09:37:40.872Z" user="mike">1</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2020-12-15T09:37:40.872Z" user="mike">First Published
                     Version</note>
-
                 <note type="updated" update="text-version" value="1.0.1" date-time="2021-01-13T09:25:15.353Z" user="mike">1.0.1</note>
                 <note type="updated" update="text-version" value="1.0.2" date-time="2021-01-14T10:10:16.742Z" user="mike">1.0.2</note>
                 <note type="updated" update="text-version" value="1.0.3" date-time="2021-01-28T16:34:38.456Z" user="celso">individual liberation to
@@ -104,6 +103,8 @@
                 <note type="updated" update="text-version" value="1.0.9" date-time="2021-08-05T03:36:39.156Z" user="celso">kiṃnara to kinnara</note>
                 <note type="updated" update="text-version" value="1.0.10" date-time="2022-04-11T12:41:18.183Z" user="laura">Bibliography update</note>
                 <note type="updated" update="text-version" value="1.0.11" date-time="2022-05-16T14:49:31.202Z" user="martina-cotter">Updated volume to "ca"</note>
+                <note type="updated" update="text-version" value="1.0.12" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.0.13" date-time="2022-06-30T09:00:43.499Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -8876,9 +8877,10 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-049-001-1618">
+                        <gloss xml:id="UT22084-049-001-1618" type="term" mode="match">
                             <term>solitary realizer</term>
-                            <term xml:lang="Bo-Ltn"/>
+                            <term xml:lang="Bo-Ltn">rang sangs rgyas</term>
+                            <term xml:lang="bo">རང་སངས་རྒྱས།</term>
                             <term xml:lang="Sa-Ltn">pratyekabuddha</term>
                         </gloss>
                     </item>
