--- a/translations/kangyur/translations/090-040_toh596-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-040_toh596-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -7,19 +7,19 @@
         <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā Dhāraṇī with Its Ritual
           Manual</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Uṣṇīṣavijayā­dhāraṇī kalpasahitā</title>
+        <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་རྒྱལ་གྱི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
         <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog pa dang bcas
           pa</title>
-        <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་རྒྱལ་གྱི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
-          par rgyal ba zhes bya ba’i gzung rtog pa dang bcas pa</title>
-        <title type="longTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུང་རྟོག་པ་དང་བཅས་པ།</title>
         <title type="longTitle" xml:lang="en">Crown Victory of All Tathāgatas: The Uṣṇīṣavijayā
           Dhāraṇī with Its Ritual Manual</title>
         <title type="longTitle" xml:lang="Sa-Ltn">Sarvatathāgata­uṣṇīṣavijayā­nāma­dhāraṇī
           kalpasahitā</title>
+        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
+          par rgyal ba zhes bya ba’i gzung rtog pa dang bcas pa</title>
+        <title type="longTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུང་རྟོག་པ་དང་བཅས་པ།</title>
+        <title type="otherTitle" xml:lang="zh">佛說一切如來烏瑟膩沙最勝總持經</title>
         <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
           par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa/</title>
-        <title type="otherTitle" xml:lang="zh">佛說一切如來烏瑟膩沙最勝總持經</title>
         <author role="translatorMain" ref="eft:team-55">Translated by Catherine Dalton<lb/>under the
           patronage and supervision of 84000: Translating the Words of the Buddha</author>
         <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
@@ -27,10 +27,11 @@
         <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
         <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
         <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+        <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="2">
@@ -64,19 +65,14 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-06-27T06:37:06.571Z" user="admin">27/06/2022 06:37:06</note>
+        <note type="lastUpdated" date-time="2022-06-30T09:49:14.063Z" user="admin">30/06/2022 09:49:14</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:57:42.226Z" user="line-tofte">4</note>
-
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-10T12:57:42.226Z" user="line-tofte">Auto
           (update-publication-status)</note>
-
         <note type="updated" update="translation-status" value="3" date-time="2021-12-16T08:23:23.847Z" user="line-tofte">3</note>
-
         <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-16T08:23:23.847Z" user="line-tofte">Auto
           (update-publication-status)</note>
-
         <note type="updated" update="text-version" value="0.0.4" date-time="2021-12-16T08:23:47.605Z" user="line-tofte">Auto (update-contributors)</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2022-02-18T13:28:03.959Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.5" date-time="2022-02-18T13:28:03.959Z" user="line-tofte">Auto
@@ -99,8 +95,9 @@
         <note type="updated" update="text-version" value="0.0.12" date-time="2022-06-03T08:53:37.283Z" user="line-tofte">Auto
           (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.13" date-time="2022-06-03T08:54:47.479Z" user="line-tofte">Auto (update-contributors)</note>
-          <note type="updated" update="translation-status" value="2" date-time="2022-06-27T06:36:58.92Z" user="line-tofte">2</note>
-          <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-27T06:36:58.92Z" user="line-tofte">Auto (update-publication-status)</note>
+        <note type="updated" update="translation-status" value="2" date-time="2022-06-27T06:36:58.92Z" user="line-tofte">2</note>
+        <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-27T06:36:58.92Z" user="line-tofte">Auto (update-publication-status)</note>
+          <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T09:49:05.618Z" user="line-tofte">Auto (update-contributors)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
