--- a/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
+++ b/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
@@ -6,45 +6,40 @@
                         <titleStmt>
                                 <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā
                                         Dhāraṇī</title>
-                                <!--<title type="mainTitle" xml:lang="Sa-Ltn">sarva­durgatipariśodhany uṣṇīṣavijayā­nāmadhāraṇī</title>-->
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Uṣṇīṣavijayā­nāma­dhāraṇī</title>
                                 <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam par rgyal
                                         ba zhes bya ba’i gzungs</title>
                                 <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས།</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་ངན་འགྲོ་ཐམས་ཅད་ཡོངས་སུ་སྦྱོང་བ་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ngan ’gro thams
-                                        cad yongs su sbyong ba gtsug tor rnam par rgyal ba zhes bya
-                                        ba’i gzungs</title>
                                 <title type="longTitle" xml:lang="en">The Noble Uṣṇīṣavijayā Dhāraṇī
                                         That Purifies All Lower Rebirths</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­sarva­durgati­pariśodhaniuṣṇīṣavijayā­nāma­dhāraṇī</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ngan ’gro thams
+                                        cad yongs su sbyong ba gtsug tor rnam par rgyal ba zhes bya
+                                        ba’i gzungs</title>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་ངན་འགྲོ་ཐམས་ཅད་ཡོངས་སུ་སྦྱོང་བ་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས།</title>
                                 <title type="otherTitle" xml:lang="Sa-Ltn">sarva­durgatipariśodhany
                                         uṣṇīṣavijayānāma­dhāraṇī</title>
-                                <title type="otherTitle" xml:lang="zh">最勝佛頂陀羅尼經</title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa ngan ’gro thams
                                         cad yongs su sbyong ba gtsug tor rnam par rgyal ba zhes bya
                                         ba’i gzungs/</title>
+                                <title type="otherTitle" xml:lang="zh">最勝佛頂陀羅尼經</title>
                                 <author role="translatorMain" ref="eft:team-65">Translated by
                                         Patrick Lambelet and Caley Smith<lb/>under the patronage and
                                         supervision of 84000: Translating the Words of the
                                         Buddha</author>
-                                <consultant role="projectManager" ref="eft:person-372">Patrick
-                                        Lambelet</consultant>
-                                <author role="translatorEng" ref="eft:person-372">Patrick
-                                        Lambelet</author>
-                                <author role="translatorEng" ref="eft:person-373">Caley
-                                        Smith</author>
+                                <consultant role="projectManager" ref="eft:person-372">Patrick Lambelet</consultant>
+                                <author role="translatorEng" ref="eft:person-372">Patrick Lambelet</author>
+                                <author role="translatorEng" ref="eft:person-373">Caley Smith</author>
                                 <editor role="projectEditor" ref="eft:person-274">Adam Krug</editor>
                                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
-                                <editor role="projectEditor" ref="eft:person-50">Andreas
-                                        Doctor</editor>
-                                <editor role="TEImarkupEditor" ref="eft:person-391">Sameer
-                                        Dhingra</editor>
+                                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+                                <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
                                 <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian
                                         Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -100,8 +95,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-06-27T06:38:44.911Z" user="admin">27/06/2022 06:38:44</note>
-
+                                <note type="lastUpdated" date-time="2022-06-30T09:56:41.029Z" user="admin">30/06/2022 09:56:41</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:50:56.094Z" user="line-tofte">Auto
@@ -132,8 +126,9 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-06-03T08:57:12.974Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2022-06-27T06:38:37.261Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-27T06:38:37.261Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="translation-status" value="2" date-time="2022-06-27T06:38:37.261Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-27T06:38:37.261Z" user="line-tofte">Auto (update-publication-status)</note>
+                            <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T09:56:32.459Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -1415,13 +1410,13 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-090-041-142">
-                                                  <term>worship</term>
-                                                  <term xml:lang="Bo-Ltn">mchod pa </term>
-                                                  <term xml:lang="bo">མཆོད་པ།</term>
-                                                  <term xml:lang="Sa-Ltn">pūjā</term>
-                                                  <term type="alternative">worshiped</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-090-041-142" type="term" mode="match">
+                            <term>worship</term>
+                            <term xml:lang="Bo-Ltn">mchod pa</term>
+                            <term xml:lang="bo">མཆོད་པ།</term>
+                            <term xml:lang="Sa-Ltn">pūjā</term>
+                            <term type="alternative">worshiped</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-090-041-143">
