--- a/translations/kangyur/translations/090-042_toh598-the_practice_of_the_incantation_of_usnisavijaya.xml
+++ b/translations/kangyur/translations/090-042_toh598-the_practice_of_the_incantation_of_usnisavijaya.xml
@@ -6,15 +6,15 @@
       <titleStmt>
         <title type="mainTitle" xml:lang="en">A Ritual Manual for the Uṣṇīṣavijayā Dhāraṇī</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Uṣṇīṣavijayā­dhāraṇī kalpa</title>
-        <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog</title>
         <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་རྒྱལ་གྱི་གཟུངས་རྟོག།</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
-          par rgyal ma’i gzungs zhe bya ba’i rtog pa</title>
-        <title type="longTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་མའི་གཟུངས་ཞེ་བྱ་བའི་རྟོག་པ།</title>
+        <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog</title>
         <title type="longTitle" xml:lang="en">Crown Victory of All Tathāgatas: A Ritual Manual for
           the Uṣṇīṣavijayā Dhāraṇī</title>
         <title type="longTitle" xml:lang="Sa-Ltn">Sarva­tathāgata­uṣṇīṣavijayā­nāma­dhāraṇī
           kalpa</title>
+        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
+          par rgyal ma’i gzungs zhe bya ba’i rtog pa</title>
+        <title type="longTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་མའི་གཟུངས་ཞེ་བྱ་བའི་རྟོག་པ།</title>
         <title type="otherTitle" xml:lang="zh">佛說一切如來烏瑟膩沙最勝總持經</title>
         <author role="translatorMain" ref="eft:team-55">Translated by Catherine Dalton<lb/>under the
           patronage and supervision of 84000: Translating the Words of the Buddha</author>
@@ -23,10 +23,11 @@
         <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
         <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
         <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+        <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="2">
@@ -62,7 +63,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-06-27T06:39:40.857Z" user="admin">27/06/2022 06:39:40</note>
+        <note type="lastUpdated" date-time="2022-06-30T09:59:51.107Z" user="admin">30/06/2022 09:59:51</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:58:16.058Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:58:16.058Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-12-16T08:24:15.715Z" user="line-tofte">3</note>
@@ -89,8 +90,9 @@
         <note type="updated" update="text-version" value="0.0.11" date-time="2022-06-03T08:58:49.088Z" user="line-tofte">Auto
           (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.12" date-time="2022-06-03T08:59:27.76Z" user="line-tofte">Auto (update-contributors)</note>
-          <note type="updated" update="translation-status" value="2" date-time="2022-06-27T06:39:33.232Z" user="line-tofte">2</note>
-          <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-27T06:39:33.232Z" user="line-tofte">Auto (update-publication-status)</note>
+        <note type="updated" update="translation-status" value="2" date-time="2022-06-27T06:39:33.232Z" user="line-tofte">2</note>
+        <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-27T06:39:33.232Z" user="line-tofte">Auto (update-publication-status)</note>
+          <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T09:59:43.045Z" user="line-tofte">Auto (update-contributors)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
