--- a/translations/kangyur/placeholders/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
+++ b/translations/kangyur/placeholders/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
@@ -15,11 +15,11 @@
                 <consultant role="projectManager" ref="contributors.xml#person-60">Benjamin Ewing</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.4 <date>2019</date>
+                <edition>v 0.1.5 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-043-010"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +35,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-02-05T07:22:55.146Z" user="admin">05/02/2021 07:22:55</note>
+                <note type="lastUpdated" date-time="2022-06-30T11:54:23.552Z" user="admin">30/06/2022 11:54:23</note>
 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:19:48.982Z" user="john">v 0.1.0</note>
 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:19:48.982Z" user="john">3</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2020-05-11T08:48:24.545Z" user="line-tofte">2.h</note>
@@ -44,7 +44,7 @@
     <note type="updated" update="text-version" value="0.1.2" date-time="2020-10-09T14:37:03.558Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2021-02-05T07:22:22.143Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.1.3" date-time="2021-02-05T07:22:22.143Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.1.4" date-time="2021-02-05T07:22:50.913Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.1.4" date-time="2021-02-05T07:22:50.913Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-06-30T11:54:15.672Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.1.5" date-time="2022-06-30T11:54:15.672Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
