--- a/translations/kangyur/placeholders/009-001_toh4-bhiksunis_pratimoksa_sutra.xml
+++ b/translations/kangyur/placeholders/009-001_toh4-bhiksunis_pratimoksa_sutra.xml
@@ -9,11 +9,12 @@
                 <title type="mainTitle" xml:lang="en">The Bhikṣunīs’ Prātimokṣa Sūtra</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date>2021</date>
+                <edition>v 0.0.3 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-009-001"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh4" type="text">
@@ -29,8 +30,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-02-23T17:03:26.198Z" user="admin">23/02/2021 17:03:26</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T17:03:23.262Z" user="john">Changed title to reflect Prātimokṣa decision</note>
+                <note type="lastUpdated" date-time="2022-06-30T12:54:53.459Z" user="admin">30/06/2022 12:54:53</note>
+    <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T17:03:23.262Z" user="john">Changed title to reflect Prātimokṣa decision</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T12:54:47.52Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T12:54:47.52Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
