--- a/translations/kangyur/placeholders/009-001_toh4-bhiksunis_pratimoksa_sutra.xml
+++ b/translations/kangyur/placeholders/009-001_toh4-bhiksunis_pratimoksa_sutra.xml
@@ -4,12 +4,14 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dge slong ma'i so sor thar pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">bhikṣunīprātimokṣasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Bhikṣunīs’ Prātimokṣa Sūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">bhikṣunīprātimokṣasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dge slong ma'i so sor thar pa'i mdo/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-412">Annie Heckman</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2021</date>
+                <edition>v 0.0.4 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -30,8 +32,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T12:54:53.459Z" user="admin">30/06/2022 12:54:53</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T17:03:23.262Z" user="john">Changed title to reflect Prātimokṣa decision</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T12:54:47.52Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T12:54:47.52Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-06-30T12:56:26.45Z" user="admin">30/06/2022 12:56:26</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T17:03:23.262Z" user="john">Changed title to reflect Prātimokṣa decision</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-06-30T12:54:47.52Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T12:54:47.52Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-30T12:56:24.397Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
