--- a/translations/kangyur/placeholders/009-002_toh5-detailed_explanations_on_nuns_discipline.xml
+++ b/translations/kangyur/placeholders/009-002_toh5-detailed_explanations_on_nuns_discipline.xml
@@ -8,8 +8,13 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">bhikṣunīvinayavibhaṅga</title>
                 <title type="mainTitle" xml:lang="en">Detailed Explanations on Nuns’ Discipline</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-009-002"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh5" type="text">
@@ -21,16 +26,15 @@
                     <author role="translatorTib">ban de dpal gyi lhun po</author>
                     <author role="translatorTib">r. bidyakaraprabha</author>
                     <author role="translatorTib">ban de dpal brtsegs</author>
-                    <location count-pages="606">
-                        <start volume="9" page="52"/>
-                        <end volume="9" page="657"/>
+                    <location work="UT4CZ5369" count-pages="606">
+                        <volume number="9" start-page="50" end-page="655"/>
                     </location>
                     <idno parent-id="O1JC114941JC11495" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC11513" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:38:11 by admin</note>
+                <note type="lastUpdated" date-time="2022-06-30T12:58:27.674Z" user="admin">30/06/2022 12:58:27</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T12:58:21.723Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-30T12:58:21.723Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
