--- a/translations/kangyur/placeholders/079-036_toh409-the_tantra_of_vajrabhairavas_destruction.xml
+++ b/translations/kangyur/placeholders/079-036_toh409-the_tantra_of_vajrabhairavas_destruction.xml
@@ -10,23 +10,27 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal rdo rje 'jigs byed rnam par 'joms pa'i rgyud kyi rgyal po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīvajrabhairava­vidāraṇatantrarāja</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-079-036"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh409" type="text">
                     <ref>Toh 409</ref>
                     <biblScope>vol.79, ff.247r-248r(pp.493-495)</biblScope>
-                    <location count-pages="3">
-                        <start volume="79" page="495"/>
-                        <end volume="79" page="497"/>
+                    <location work="UT4CZ5369" count-pages="3">
+                        <volume number="79" start-page="493" end-page="495"/>
                     </location>
                     <idno parent-id="O1JC114941JC21412" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12110" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:36:58 by admin</note>
+                <note type="lastUpdated" date-time="2022-06-30T13:02:23.305Z" user="admin">30/06/2022 13:02:23</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:02:17.388Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-30T13:02:17.388Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
