--- a/translations/kangyur/placeholders/079-036_toh409-the_tantra_of_vajrabhairavas_destruction.xml
+++ b/translations/kangyur/placeholders/079-036_toh409-the_tantra_of_vajrabhairavas_destruction.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">'jigs byed rnam par 'joms pa'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vajrabhairavavidāraṇatantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of Vajrabhairava’s Destruction</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal rdo rje 'jigs byed rnam par 'joms pa'i rgyud kyi rgyal po/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">vajrabhairavavidāraṇatantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">'jigs byed rnam par 'joms pa'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīvajrabhairava­vidāraṇatantrarāja</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dpal rdo rje 'jigs byed rnam par 'joms pa'i rgyud kyi rgyal po/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -30,7 +32,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T13:02:23.305Z" user="admin">30/06/2022 13:02:23</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:02:17.388Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-30T13:02:17.388Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-06-30T13:02:59.882Z" user="admin">30/06/2022 13:02:59</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:02:17.388Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-30T13:02:17.388Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:02:52.006Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
