--- a/translations/kangyur/placeholders/083-016_toh468-the_tantra_of_the_great_vajrabhairava.xml
+++ b/translations/kangyur/placeholders/083-016_toh468-the_tantra_of_the_great_vajrabhairava.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">'jigs byed chen po'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vajramahābhairavatantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of the Great Vajrabhairava</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal rdo rje 'jigs byed chen po'i rgyud ces bya ba/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">vajramahābhairavatantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">'jigs byed chen po'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīvajramahābhairavanāmatantra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dpal rdo rje 'jigs byed chen po'i rgyud ces bya ba/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -31,8 +33,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T13:03:56.148Z" user="admin">30/06/2022 13:03:56</note>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:03:50.179Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:03:50.179Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-06-30T13:04:31.947Z" user="admin">30/06/2022 13:04:31</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:03:50.179Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:03:50.179Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T13:04:24.066Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
