--- a/translations/kangyur/placeholders/083-019_toh471-the_practice_of_the_legend.xml
+++ b/translations/kangyur/placeholders/083-019_toh471-the_practice_of_the_legend.xml
@@ -4,12 +4,14 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gtam rgyud kyi rtog pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Practice of the Legend</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gtam rgyud kyi rtog pa/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -29,8 +31,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T13:06:58.175Z" user="admin">30/06/2022 13:06:58</note>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:06:52.251Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:06:52.251Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-06-30T13:07:36.588Z" user="admin">30/06/2022 13:07:36</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:06:52.251Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:06:52.251Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T13:07:28.729Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
