--- a/translations/kangyur/placeholders/083-020_toh472-the_ritual_practices_of_the_muskrat.xml
+++ b/translations/kangyur/placeholders/083-020_toh472-the_ritual_practices_of_the_muskrat.xml
@@ -10,8 +10,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">te'u lo pa'i cho ga zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">chucchundarakalpanāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-083-020"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh472" type="text">
@@ -25,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:34:48 by admin</note>
+                <note type="lastUpdated" date-time="2022-06-30T13:08:30.315Z" user="admin">30/06/2022 13:08:30</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:08:24.357Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-30T13:08:24.357Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
