--- a/translations/kangyur/placeholders/083-020_toh472-the_ritual_practices_of_the_muskrat.xml
+++ b/translations/kangyur/placeholders/083-020_toh472-the_ritual_practices_of_the_muskrat.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">te'u lo pa'i cho ga</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">chucchundarakalpa</title>
                 <title type="mainTitle" xml:lang="en">The Ritual Practices of the Muskrat</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">te'u lo pa'i cho ga zhes bya ba/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">chucchundarakalpa</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">te'u lo pa'i cho ga</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">chucchundarakalpanāma</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">te'u lo pa'i cho ga zhes bya ba/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -30,7 +32,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T13:08:30.315Z" user="admin">30/06/2022 13:08:30</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:08:24.357Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-30T13:08:24.357Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-06-30T13:09:08.348Z" user="admin">30/06/2022 13:09:08</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:08:24.357Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-30T13:08:24.357Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:09:00.465Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
