--- a/translations/kangyur/placeholders/083-017_toh469-the_tantra_of_black_yamari_in_three_chapters.xml
+++ b/translations/kangyur/placeholders/083-017_toh469-the_tantra_of_black_yamari_in_three_chapters.xml
@@ -11,12 +11,13 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīkṛṣṇayamāritantra­rājatrikalpanāma</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-083-017"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh469" type="text">
@@ -30,8 +31,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:00:52.33Z" user="admin">20/12/2019 13:00:52</note>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="lastUpdated" date-time="2022-06-30T13:10:03.861Z" user="admin">30/06/2022 13:10:03</note>
+<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:09:57.897Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:09:57.897Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
