--- a/translations/kangyur/placeholders/083-017_toh469-the_tantra_of_black_yamari_in_three_chapters.xml
+++ b/translations/kangyur/placeholders/083-017_toh469-the_tantra_of_black_yamari_in_three_chapters.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje'i gshed nag po'i rgyud kyi rtog pa gsum pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">kṛṣṇayamāritantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of Black Yamāri in Three Chapters</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal gshin rje'i gshed nag po'i rgyud kyi rgyal po rtog pa gsum pa zhes bya ba/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">kṛṣṇayamāritantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje'i gshed nag po'i rgyud kyi rtog pa gsum pa/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīkṛṣṇayamāritantra­rājatrikalpanāma</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dpal gshin rje'i gshed nag po'i rgyud kyi rgyal po rtog pa gsum pa zhes bya ba/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -31,8 +33,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T13:10:03.861Z" user="admin">30/06/2022 13:10:03</note>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:09:57.897Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:09:57.897Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-06-30T13:10:46.471Z" user="admin">30/06/2022 13:10:46</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:09:57.897Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:09:57.897Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T13:10:38.564Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
