--- a/translations/kangyur/translations/075-003_toh345-the_magnificent_account_about_a_sow.xml
+++ b/translations/kangyur/translations/075-003_toh345-the_magnificent_account_about_a_sow.xml
@@ -69,11 +69,11 @@
       </titleStmt>
 
       <editionStmt>
-                <edition>v 1.0.7 <date>2022</date>
+                <edition>v 1.0.8 <date>2022</date>
                 </edition>
             </editionStmt>
 
-      <publicationStmt status="1.a">
+      <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -109,7 +109,7 @@
       <notesStmt>
 
 
-        <note type="lastUpdated" date-time="2022-06-27T20:00:22.933Z" user="admin">27/06/2022 20:00:22</note>
+        <note type="lastUpdated" date-time="2022-07-04T06:49:29.609Z" user="admin">04/07/2022 06:49:29</note>
 
 
         <tei:note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</tei:note>
@@ -206,6 +206,8 @@
 
         <note type="updated" update="text-version" value="1.0.6" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
           <note type="updated" update="text-version" value="1.0.7" date-time="2022-06-27T20:00:15.404Z" user="martina-cotter">Auto (update-titles)</note>
+          <note type="updated" update="translation-status" value="1" date-time="2022-07-04T06:49:21.848Z" user="sameer">1</note>
+          <note type="updated" update="text-version" value="1.0.8" date-time="2022-07-04T06:49:21.848Z" user="sameer">Auto (update-publication-status)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
