--- a/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -29,7 +29,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -65,7 +65,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-07-04T10:03:24.106Z" user="admin">04/07/2022 10:03:24</note>
+        <note type="lastUpdated" date-time="2022-07-06T11:52:45.319Z" user="admin">06/07/2022 11:52:45</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-16T08:20:54.493Z" user="line-tofte">Auto (update-contributors)</note>
@@ -100,6 +100,7 @@
           <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-24T09:49:54.256Z" user="line-tofte">Auto (update-contributors)</note>
           <note type="updated" update="translation-status" value="1.a" date-time="2022-07-04T10:03:16.341Z" user="sameer">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-04T10:03:16.341Z" user="sameer">First published version</note>
+          <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-06T11:52:41.388Z" user="martina-cotter">Updates through revisions.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -446,7 +447,7 @@
                         <mantra xml:lang="Sa-Ltn">“oṃ namo bhagavate
               sarvatrailokyaprativiśiṣṭāya buddhāya te namaḥ | tadyathā | <lb/> oṃ bhrūṃ bhrūṃ bhrūṃ
               śodhaya śodhaya viśodhaya viśodhaya asamasamantāvabhāsaspharaṇagatigagane <ref cRef="F.230.b" type="folio" xml:id="UT22084-090-038-246"/> svabhāvaviśuddhe |
-              uṣṇīṣavijāyāpariśuddhe | abhiṣiñcantu māṃ sarvatathāgatāḥ
+              uṣṇīṣavijayāpariśuddhe | abhiṣiñcantu māṃ sarvatathāgatāḥ
               sugatavaravacanāmṛtābhiṣekair mahāmudrāmantrapadaiḥ | oṃ āhara āhara āyuḥsaṃdhāraṇi
               śodhaya śodhaya viśodhaya viśodhaya gaganasvabhāvaviśuddhe | uṣṇīṣavijayāpariśuddhe |
               sahasraraśmisaṃcodite sarvatathāgatāvalokini ṣaṭpāramitāparipūraṇi |
@@ -462,7 +463,7 @@
               sarvagatipariśuddhiś ca | sarvatathāgatahṛdayādhiṣṭhānādhiṣṭhite | sarvatathāgatāś ca
               samāśvāsayantu | oṃ budhya budhya sidhya sidhya bodhaya bodhaya vibodhaya vibodhaya
               mocaya mocaya vimocaya vimocaya śodhaya śodhaya viśodhaya viśodhaya samantān mocaya
-              mocaya samantaraśmipariśuddhe | sarvatathāgatahṛdayādhiṣṭhanādhiṣṭhite oṃ mudre mudre
+              mocaya samantaraśmipariśuddhe | sarvatathāgatahṛdayādhiṣṭhānādhiṣṭhite oṃ mudre mudre
               mahāmudre mahāmudrāmantrapade svāhā<note place="end" xml:id="UT22084-090-038-51">
                 Hidas has translated the dhāraṇī based on his edition, and rather than retranslate
                 it, we give his translation here: “<mantra xml:lang="en" type="dharani">Oṃ
@@ -832,7 +833,7 @@
             <l>Listen with one-pointed attention!”</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-090-038-113"/>
-          <p tid="69">Then the Blessed One entered into equipoise in the samādhi called <distinct>glorious
+          <p tid="69">Then the Blessed One entered the samādhi called <distinct>glorious
               limitless light rays<note place="end" xml:id="UT22084-090-038-114"> The term <foreign xml:lang="Bo-Ltn" type="term">’od dpag tu med pa</foreign>, which is translated
                 here as “light rays” because it is part of a larger phrase, is also the name of the
                 Buddha Amitābha, of whom Amitāyus is generally understood to be simply a different
@@ -1396,7 +1397,7 @@
                             <term>nun</term>
                             <term xml:lang="Bo-Ltn">dge slong ma</term>
                             <term xml:lang="bo">དགེ་སློང་མ།</term>
-                            <term xml:lang="Sa-Ltn">bhikṣunī</term>
+                          <term xml:lang="Sa-Ltn">bhikṣuṇī</term>
                             <term type="definition">Fully ordained nun. See also “monk.”</term>
                         </gloss>
                     </item>
