--- a/translations/kangyur/placeholders/056-008_toh140,525,914-the_incantation_for_achieving_the_boundless_gate.xml
+++ b/translations/kangyur/placeholders/056-008_toh140,525,914-the_incantation_for_achieving_the_boundless_gate.xml
@@ -16,9 +16,16 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgo mtha' yas pa sgrub pa zhes bya ba'i gzungs</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sgo mtha' yas pas bsgrub pa'i gzungs/</title>
                 <author role="translatorMain" ref="eft:team-84"/>
+                <consultant role="dharmaMaster" ref="eft:person-415">Khenpo Tsulnam Rinpoche</consultant>
+                <consultant role="dharmaMaster" ref="eft:person-414">Khenpo Zhonu Nyima</consultant>
+                <consultant role="projectManager" ref="eft:person-413">Dakpa Gyatso</consultant>
+                <author role="translatorEng" ref="eft:person-413">Dakpa Gyatso</author>
+                <author role="translatorEng" ref="eft:person-416">Barbara Hazelton</author>
+                <author role="translatorEng" ref="eft:person-417">Rory Tasker</author>
+                <consultant role="advisor" ref="eft:person-418">Wangchuk Dorje Negi</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2021</date>
+                <edition>v 0.0.6 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -55,7 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-07T08:17:59.852Z" user="admin">07/07/2022 08:17:59</note>
+                <note type="lastUpdated" date-time="2022-07-07T08:20:06.289Z" user="admin">07/07/2022 08:20:06</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-08-04T12:41:38.803Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-04T12:41:38.803Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="" date-time="2021-09-16T13:08:20.545Z" user="line-tofte"/>
@@ -65,6 +72,7 @@
                 <note type="updated" update="translation-status" value="3" date-time="2022-07-07T08:16:46.445Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-07T08:16:46.445Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-07T08:17:52.127Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-07T08:19:58.723Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
