--- a/translations/kangyur/placeholders/094-005_toh728-the_hundred_and_eight_names_of_tara.xml
+++ b/translations/kangyur/placeholders/094-005_toh728-the_hundred_and_eight_names_of_tara.xml
@@ -16,11 +16,11 @@
                 <editor role="copyEditor" ref="eft:person-66">Joseph McClellan</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.7 <date>2019</date>
+                <edition>v 0.1.8 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-094-005"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-04T12:57:27.989Z" user="admin">04/07/2022 12:57:27</note>
+                <note type="lastUpdated" date-time="2022-07-07T09:27:32.866Z" user="admin">07/07/2022 09:27:32</note>
 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:56:38.631Z" user="john">v 0.1.0</note>
 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:56:38.631Z" user="john">3</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2020-05-28T13:10:21.844Z" user="line-tofte">2.h</note>
@@ -53,6 +53,8 @@
     <note type="updated" update="text-version" value="0.1.6" date-time="2022-02-23T08:54:33.101Z" user="line-tofte">Auto (update-publication-status)</note>
     <note type="updated" update="translation-status" value="2.c" date-time="2022-07-04T12:57:20.193Z" user="line-tofte">2.c</note>
     <note type="updated" update="text-version" value="0.1.7" date-time="2022-07-04T12:57:20.193Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="translation-status" value="2.b" date-time="2022-07-07T09:27:25.264Z" user="line-tofte">2.b</note>
+    <note type="updated" update="text-version" value="0.1.8" date-time="2022-07-07T09:27:25.264Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
